[gd_scene load_steps=11 format=3 uid="uid://b5uyful5m0wg5"]

[ext_resource type="FontFile" uid="uid://br01odh1twpni" path="res://shared/fonts/aldo_the_apache/AldotheApache.ttf" id="1"]
[ext_resource type="Script" path="res://scenes/ui/stage_clear/stage_clear.gd" id="2"]
[ext_resource type="Shader" path="res://scenes/ui/stage_clear/effects/blur.gdshader" id="2_tpdoi"]
[ext_resource type="Theme" uid="uid://8wej1kve5gix" path="res://scenes/ui/shared/theme.tres" id="3_ihxgv"]
[ext_resource type="Script" path="res://addons/shaker/shaker.gd" id="5_ogug0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ntget"]
shader = ExtResource("2_tpdoi")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_twbca"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id="Animation_kjn10"]
resource_name = "appear"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.352941)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Blur:material:shader_parameter/lod")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [0.0, 0.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(414, -346), Vector2(414, 64)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"animated_stats"
}]
}

[sub_resource type="Animation" id="Animation_hqys5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Blur:material:shader_parameter/lod")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(414, -346)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qm3d1"]
_data = {
"RESET": SubResource("Animation_hqys5"),
"appear": SubResource("Animation_kjn10")
}

[node name="StageClear" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ntget")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 414.0
offset_top = -346.0
offset_right = 1506.0
offset_bottom = -132.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 200
theme_override_styles/normal = SubResource("StyleBoxFlat_twbca")
text = "STAGE CLEAR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -472.0
offset_top = -186.0
offset_right = 472.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="DetailHBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="TagVBoxContainer" type="VBoxContainer" parent="VBoxContainer2/DetailHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer2/DetailHBoxContainer/TagVBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "TIME"

[node name="Label2" type="Label" parent="VBoxContainer2/DetailHBoxContainer/TagVBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "EARLY BUMPS"

[node name="Label5" type="Label" parent="VBoxContainer2/DetailHBoxContainer/TagVBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "LATE BUMPS"

[node name="Label6" type="Label" parent="VBoxContainer2/DetailHBoxContainer/TagVBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "PERFECT BUMPS"

[node name="Label3" type="Label" parent="VBoxContainer2/DetailHBoxContainer/TagVBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "BALL BOUNCES"

[node name="Label4" type="Label" parent="VBoxContainer2/DetailHBoxContainer/TagVBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "Score"

[node name="ValueBoxContainer" type="VBoxContainer" parent="VBoxContainer2/DetailHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Time" type="Label" parent="VBoxContainer2/DetailHBoxContainer/ValueBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "10000"

[node name="EarlyBumps" type="Label" parent="VBoxContainer2/DetailHBoxContainer/ValueBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "50"

[node name="LateBumps" type="Label" parent="VBoxContainer2/DetailHBoxContainer/ValueBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "50"

[node name="PerfectBumps" type="Label" parent="VBoxContainer2/DetailHBoxContainer/ValueBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "50"

[node name="Bounces" type="Label" parent="VBoxContainer2/DetailHBoxContainer/ValueBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "120"

[node name="Score" type="Label" parent="VBoxContainer2/DetailHBoxContainer/ValueBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 60
text = "1000000"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer2"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="FinalScoreHBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="FinalScoreLabel" type="Label" parent="VBoxContainer2/FinalScoreHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 80
text = "FINAL SCORE"

[node name="FinalScore" type="Label" parent="VBoxContainer2/FinalScoreHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 80
text = "10010170"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -224.0
offset_top = -176.0
offset_right = 224.0
offset_bottom = -80.0

[node name="NextBtn" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("3_ihxgv")
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 80
text = "NEXT"

[node name="Shaker" type="Node" parent="." node_paths=PackedStringArray("target_node")]
script = ExtResource("5_ogug0")
target_node = NodePath("..")
target_property = &"rotation"
min_value = -0.05
max_value = 0.05
constant = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qm3d1")
}

[connection signal="pressed" from="VBoxContainer/NextBtn" to="." method="_on_NextBtn_pressed"]
